sample/retrieveUnpackaged/objects/Meter_Details__c.object
<CustomObject>
    <fields>
        <fullName>Digital_Meter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Meter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_meter_install_date__c</fullName>
        <label>Digital meter install date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FORMULA_Location_Description__c</fullName>
        <formula>CASE(MID(Location_Code__c ,2,1),
&quot;B&quot;, &quot;Buried/low&quot;,
&quot;C&quot;, &quot;Left double gate/driveway&quot;,
&quot;D&quot;, &quot;Right double gate/driveway&quot;,
&quot;F&quot;, &quot;At Fence&quot;,
&quot;G&quot;, &quot;Opposite left corner house&quot;,
&quot;H&quot;, &quot;Opposite right corner house&quot;,
&quot;J&quot;, &quot;Left small entrance&quot;,
&quot;K&quot;, &quot;Right small entrance&quot;,
&quot;P&quot;, &quot;Pit&quot;,
&quot;R&quot;, &quot;Read from outside&quot;,
&quot;S&quot;, &quot;Shrub/bush&quot;,
&quot;T&quot;, &quot;At Tap&quot;,
&quot;W&quot;, &quot;At wall&quot;,
&quot;Z&quot;, &quot;Dog&quot;,
&quot;X&quot;, &quot;Meter is visible&quot;,
MID(Location_Code__c ,2,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORMULA_RLIST_Meter_Reading_History__c</fullName>
        <formula>HYPERLINK(
&quot;javascript:if (typeof(srcUp) == &apos;function&apos;) { srcUp(&apos;/apex/MeterReadingsHistory?id=&quot;&amp;Id&amp;&quot;&amp;isdtp=vw&apos;); } else { window.location = &apos;/apex/MeterReadingsHistory?id=&quot;&amp;Id&amp;&quot;&amp;retURL=&apos;+window.location.href; }&quot;, 
&quot;See Meter Readings History&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meter Reading History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Meter_Number__c</fullName>
        <label>Group Meter Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location2__c</fullName>
        <label>Location2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location3__c</fullName>
        <label>Location3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Description__c</fullName>
        <label>Meter Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Location__c</fullName>
        <description>Shows the meter location on the house in an image form</description>
        <formula>IF(Location_Code__c == &quot;99&quot;, &quot;No Meter&quot;,
IMAGE(  &quot;https://southeastwater--c.ap1.content.force.com&quot; +
CASE(  LEFT(Location_Code__c , 1),
&quot;0&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mB4&quot;, 
&quot;1&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mAo&quot;,
&quot;2&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mAt&quot;,
&quot;3&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mAy&quot;,
&quot;4&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mAu&quot;,
&quot;5&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mB3&quot;,
&quot;6&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mB8&quot;,
&quot;7&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mBD&quot;,
&quot;8&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mBI&quot;,
&quot;9&quot;, &quot;/servlet/servlet.ImageServer?id=015900000002mBN&quot;,
&quot;/servlet/servlet.ImageServer?id=015900000003GOp&quot;) + &quot;&amp;oid=00DO0000000W4pz&quot; 
, &quot;Meter Image&quot;))</formula>
        <label>Meter Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Profile__c</fullName>
        <formula>CASE( Person_Count__c ,
		1, &apos;A&apos;,
		2, &apos;B&apos;,
		3, &apos;C&apos;,
		4, &apos;D&apos;,
		5, &apos;E&apos;,
		&apos;F&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meter Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Type__c</fullName>
        <label>Meter Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nbr_of_Consecutive_Estimated_Reads__c</fullName>
        <label># of Consecutive Estimated Reads</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Count__c</fullName>
        <label>Person Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pit_Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pit Reference</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Meters</relationshipLabel>
        <relationshipName>Meter_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remote_Make__c</fullName>
        <label>Remote Make</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Serial__c</fullName>
        <label>Remote Serial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Meter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pit_Reference__c</columns>
        <columns>Meter_Type__c</columns>
        <columns>Location_Code__c</columns>
        <columns>Meter_Description__c</columns>
        <columns>Property__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meter Serial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>